--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "express": "^4.18.1",
     "inquirer": "^8.2.4",
     "mysql": "^2.18.1",
-    "mysql2": "^2.3.3"
+    "mysql2": "^2.3.3",
+    "mysql2-async": "^1.1.2"
   }
 }
