--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   },
   "homepage": "https://github.com/infinissible/Ch12-Employee-Tracker#readme",
   "dependencies": {
+    "chalk": "^5.0.1",
     "console.table": "^0.10.0",
     "express": "^4.18.1",
     "inquirer": "^8.2.4",
